--- a/Emart.Web/appsettings.json
+++ b/Emart.Web/appsettings.json
@@ -1,10 +1,12 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
+      "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DBConnection": "Data Source=localhost;Initial Catalog=petclinic;User ID=petclinic;Password=password;persist security info=True;",
+    "CreateDatabase": "Data Source=localhost;User ID=petclinic;Password=password;persist security info=True;"
   },
   "AllowedHosts": "*"
 }
